# lc_notes

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  service.py
.github/workflows/: learn-github-actions.yml
demo/: click.py
src/: practise_array.py  practise_hash.py
src/binary_tree/: basic.ipynb
src/hash/: practise.ipynb
src/string/: kmp.py  kmp_learning.ipynb  practise.ipynb  reverse_str.py
