[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["feidandan <cx503722435@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
pandas = "^2.2.2"
click = "^8.1.7"
pre-commit = "^3.7.1"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
click_cli = "demo.click:run"
